# Project-7

./: .env  .gitignore  CHANGELOG.md  README.md  final upgrades.md  final upgrades.tmp.md  package-lock.json  package.json
Project 7 Main/: PROJECT7_CONSOLIDATED_PLAN.md  PROJECT7_LEGACY_ORG.md
Project 7 Main/Project7_CryptoBot_Dev/services/quant/: Dockerfile  pyproject.toml
Project 7 Main/Project7_CryptoBot_Dev/services/quant/datasets/: sample_ticks.csv
Project 7 Main/Project7_CryptoBot_Dev/services/quant/docs/: compliance_replay.md  comprehensive.md  config_diffs.md  strategy_vault.md
Project 7 Main/Project7_CryptoBot_Dev/services/quant/quant/: REVIEW-CRITCAL.md  __init__.py  kelly.py  tca
Project 7 Main/Project7_CryptoBot_Dev/services/quant/scripts/: run_backtest.py  run_model_card.py  run_smoke.py
Project 7 Main/Project7_CryptoBot_Dev/services/quant/src/crypto_quant_ai/alpha/: momentum_funding.py  perp_skew_mm.py
Project 7 Main/Project7_CryptoBot_Dev/services/quant/src/crypto_quant_ai/backtest/: engine.py
Project 7 Main/Project7_CryptoBot_Dev/services/quant/src/crypto_quant_ai/config/: config.py
Project 7 Main/Project7_CryptoBot_Dev/services/quant/src/crypto_quant_ai/execution/: oms_async.py  tca.py
Project 7 Main/Project7_CryptoBot_Dev/services/quant/src/crypto_quant_ai/fm/: client.py
Project 7 Main/Project7_CryptoBot_Dev/services/quant/src/crypto_quant_ai/llm/: alpha_miner.py
Project 7 Main/Project7_CryptoBot_Dev/services/quant/src/crypto_quant_ai/monitoring/: otel.py
Project 7 Main/Project7_CryptoBot_Dev/services/quant/tests/: test_guards.py
(+311 files in other folders)
